[AF][IOS] Fixs bug with GPay logo appearing out of order in CC suggestions.

1) Removes the logic to bring the most recently used suggestion to the
   front of the list for consistency with other platforms.
2) Keeps the GPay logo as the first suggestion when "Clear Form" is moved
   the front of the list.

Bug: 852529
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I5f214078f2a64507a0c326665d5dce9a2f35d7f4
Reviewed-on: https://chromium-review.googlesource.com/1140900
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Commit-Queue: Moe Ahmadi <mahmadi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576027}
Former-commit-id: 230fda928bb5f628824cae695f81e40ee8066c75