components/autofill/ios/browser/autofill_agent_unittests.mm
@@ -7,6 +7,7 @@
 #include "base/strings/utf_string_conversions.h"
 #import "base/test/ios/wait_util.h"
 #include "components/autofill/core/browser/autofill_test_utils.h"
+#include "components/autofill/core/browser/popup_item_ids.h"
 #include "components/autofill/core/common/autofill_pref_names.h"
 #include "components/autofill/core/common/form_data.h"
 #import "components/autofill/ios/browser/js_autofill_manager.h"
@@ -25,6 +26,8 @@
 #error "This file requires ARC support."
 #endif
 
+using autofill::POPUP_ITEM_ID_CLEAR_FORM;
+using autofill::POPUP_ITEM_ID_GOOGLE_PAY_BRANDING;
 using base::test::ios::WaitUntilCondition;
 
 // Test fixture for AutofillAgent testing.
@@ -155,7 +158,7 @@ TEST_F(AutofillAgentTests, OnFormDataFilledWithNameCollisionTest) {
 
 // Tests that when a user initiated form activity is registered the script to
 // extract forms is executed.
-TEST_F(AutofillAgentTests, SuggestionsAvailable_UserInitiatedActivity) {
+TEST_F(AutofillAgentTests, CheckIfSuggestionsAvailable_UserInitiatedActivity) {
   [[mock_js_injection_receiver_ expect]
       executeJavaScript:@"__gCrWeb.autofill.extractForms(1, true);"
       completionHandler:[OCMArg any]];
@@ -177,7 +180,8 @@ TEST_F(AutofillAgentTests, SuggestionsAvailable_UserInitiatedActivity) {
 // Tests that when a non user initiated form activity is registered the
 // completion callback passed to the call to check if suggestions are available
 // is invoked with no suggestions.
-TEST_F(AutofillAgentTests, SuggestionsAvailable_NonUserInitiatedActivity) {
+TEST_F(AutofillAgentTests,
+       CheckIfSuggestionsAvailable_NonUserInitiatedActivity) {
   __block BOOL completion_handler_success = NO;
   __block BOOL completion_handler_called = NO;
 
@@ -201,4 +205,121 @@ TEST_F(AutofillAgentTests, SuggestionsAvailable_NonUserInitiatedActivity) {
     return completion_handler_called;
   });
   EXPECT_FALSE(completion_handler_success);
+}
+
+// Tests that when Autofill suggestions are made available to AutofillManager
+// "Clear Form" is moved to the start of the list and the order of other
+// suggestions remains unchanged.
+TEST_F(AutofillAgentTests, onSuggestionsReady_ClearForm) {
+  __block NSArray<FormSuggestion*>* completion_handler_suggestions = nil;
+  __block BOOL completion_handler_called = NO;
+
+  // Make the suggestions available to AutofillManager.
+  NSArray* suggestions = @[
+    [FormSuggestion suggestionWithValue:@""
+                     displayDescription:nil
+                                   icon:@""
+                             identifier:123],
+    [FormSuggestion suggestionWithValue:@""
+                     displayDescription:nil
+                                   icon:@""
+                             identifier:321],
+    [FormSuggestion suggestionWithValue:@""
+                     displayDescription:nil
+                                   icon:@""
+                             identifier:autofill::POPUP_ITEM_ID_CLEAR_FORM]
+  ];
+  [autofill_agent_
+      onSuggestionsReady:suggestions
+           popupDelegate:base::WeakPtr<autofill::AutofillPopupDelegate>()];
+
+  // Retrieves the suggestions.
+  auto completionHandler = ^(NSArray<FormSuggestion*>* suggestions,
+                             id<FormSuggestionProvider> delegate) {
+    completion_handler_suggestions = [suggestions copy];
+    completion_handler_called = YES;
+  };
+  [autofill_agent_ retrieveSuggestionsForForm:@"form"
+                                    fieldName:@"address"
+                              fieldIdentifier:@"address"
+                                    fieldType:@"text"
+                                         type:@"focus"
+                                   typedValue:@""
+                                     webState:&test_web_state_
+                            completionHandler:completionHandler];
+  test_web_state_.WasShown();
+
+  // Wait until the expected handler is called.
+  WaitUntilCondition(^bool() {
+    return completion_handler_called;
+  });
+
+  // "Clear Form" should appear as the first suggestion. Otherwise, the order of
+  // suggestions should not change.
+  EXPECT_EQ(3U, completion_handler_suggestions.count);
+  EXPECT_EQ(POPUP_ITEM_ID_CLEAR_FORM,
+            completion_handler_suggestions[0].identifier);
+  EXPECT_EQ(123, completion_handler_suggestions[1].identifier);
+  EXPECT_EQ(321, completion_handler_suggestions[2].identifier);
+}
+
+// Tests that when Autofill suggestions are made available to AutofillManager
+// GPay icon remains as the first suggestion.
+TEST_F(AutofillAgentTests, onSuggestionsReady_ClearFormWithGPay) {
+  __block NSArray<FormSuggestion*>* completion_handler_suggestions = nil;
+  __block BOOL completion_handler_called = NO;
+
+  // Make the suggestions available to AutofillManager.
+  NSArray* suggestions = @[
+    [FormSuggestion suggestionWithValue:@""
+                     displayDescription:nil
+                                   icon:@""
+                             identifier:POPUP_ITEM_ID_GOOGLE_PAY_BRANDING],
+    [FormSuggestion suggestionWithValue:@""
+                     displayDescription:nil
+                                   icon:@""
+                             identifier:123],
+    [FormSuggestion suggestionWithValue:@""
+                     displayDescription:nil
+                                   icon:@""
+                             identifier:321],
+    [FormSuggestion suggestionWithValue:@""
+                     displayDescription:nil
+                                   icon:@""
+                             identifier:POPUP_ITEM_ID_CLEAR_FORM]
+  ];
+  [autofill_agent_
+      onSuggestionsReady:suggestions
+           popupDelegate:base::WeakPtr<autofill::AutofillPopupDelegate>()];
+
+  // Retrieves the suggestions.
+  auto completionHandler = ^(NSArray<FormSuggestion*>* suggestions,
+                             id<FormSuggestionProvider> delegate) {
+    completion_handler_suggestions = [suggestions copy];
+    completion_handler_called = YES;
+  };
+  [autofill_agent_ retrieveSuggestionsForForm:@"form"
+                                    fieldName:@"address"
+                              fieldIdentifier:@"address"
+                                    fieldType:@"text"
+                                         type:@"focus"
+                                   typedValue:@""
+                                     webState:&test_web_state_
+                            completionHandler:completionHandler];
+  test_web_state_.WasShown();
+
+  // Wait until the expected handler is called.
+  WaitUntilCondition(^bool() {
+    return completion_handler_called;
+  });
+
+  // GPay icon should appear as the first suggestion followed by "Clear Form".
+  // Otherwise, the order of suggestions should not change.
+  EXPECT_EQ(4U, completion_handler_suggestions.count);
+  EXPECT_EQ(POPUP_ITEM_ID_GOOGLE_PAY_BRANDING,
+            completion_handler_suggestions[0].identifier);
+  EXPECT_EQ(POPUP_ITEM_ID_CLEAR_FORM,
+            completion_handler_suggestions[1].identifier);
+  EXPECT_EQ(123, completion_handler_suggestions[2].identifier);
+  EXPECT_EQ(321, completion_handler_suggestions[3].identifier);
 }
